--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>PotatoCoffee</title>
+	<title>CatCafe'</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -35,7 +35,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>	
+			</div>
 		</header>
 
 
@@ -57,18 +57,18 @@
 					<div class="row">
 						<div class="col-1-2">
 							<div class="about-preview">
-							<h3 class="title">QQ內內好喝到咩噗茶</h3>	
-							<p class="para">真材實料，絕對好喝</p>
-							<a href="#" class="btn">近期活動</a>
+							<h3 class="title">讓貓咪治癒你的心</h3>	
+							<p class="para">真材實料，沒有貓毛</p>
+							<a class="btn btn-primary"  href="#">近期活動</a>
 							</div>
 						</div>
 
 						<div class="col-1-2">
 							<div class="image-container">
-								<div class="image" style="background-image: url('images/products/product005.jpg');"></div>
+								<div class="image" style="background-image: url('images/products/bgcat001.jpg');"></div>
 							</div>
-							
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -78,18 +78,18 @@
 				<div class="container">
 					<div class="section-intro">
 						<h2 class="title">SERVICE</h2>
-						<P class="para">APP會員期間限定，買一送一</P>
+						<P class="para">APP會員期間限定，咖啡買一送一</P>
 					</div>
 					<div class="row">
 						<div class="col-1-3">
 							<div class="service-item">
 								<div class="image-container">
-									<div class="image" style="background-image: url('images/products/product002.jpg');"> </div>
+									<div class="image" style="background-image: url('images/products/cat002.jpg');"> </div>
 								</div>
 								<div class="preview">
-									<h4 class="title">草莓塔</h4>
-									<h5 class="subtitle">Good to eat</h5>
-									<p class="para">111111</p>
+									<h4 class="title">草莓牛奶</h4>
+									<h5 class="subtitle">Good to drink</h5>
+									<p class="para">比林鳳營還濃醇香</p>
 									<a href="#" class="btn btn-secondary">Read more</a>
 								</div>
 							</div>
@@ -97,12 +97,12 @@
 						<div class="col-1-3">
 							<div class="service-item">
 								<div class="image-container">
-									<div class="image" style="background-image: url('images/products/product003.jpg');"> </div>
+									<div class="image" style="background-image: url('images/products/cat003.jpg');"></div>
 								</div>
 								<div class="preview">
-									<h4 class="title">烤布蕾</h4>
-									<h5 class="subtitle">Good to eat</h5>
-									<p class="para">111111</p>
+									<h4 class="title">經典咖啡</h4>
+									<h5 class="subtitle">Good to drink</h5>
+									<p class="para">冰的熱的通通有</p>
 									<a href="#" class="btn btn-secondary">Read more</a>
 								</div>
 							</div>
@@ -110,12 +110,12 @@
 						<div class="col-1-3">
 							<div class="service-item">
 								<div class="image-container">
-									<div class="image" style="background-image: url('images/products/product004.jpg');"></div>
+									<div class="image" style="background-image: url('images/products/cat004.jpg');"></div>
 								</div>
 								<div class="preview">
-									<h4 class="title">水果鬆餅</h4>
+									<h4 class="title">下午茶套餐</h4>
 									<h5 class="subtitle">Good to eat</h5>
-									<p class="para">111111</p>
+									<p class="para">多元餐點，任君挑選</p>
 									<a href="#" class="btn btn-secondary">Read more</a>
 								</div>
 							</div>
@@ -123,6 +123,78 @@
 					</div>
 				</div>	
 			</div>
+
+
+			<div class="hero reservation">
+				<div class="mask-dark"></div>
+					<div class="section-intro">
+						<h2 class="title">MENU</h2>
+						<p class="para">我們的菜單提供了各式各樣的食品圖片</p>
+					</div>
+					<div class="title-bar">
+						<a href="#" class="btn btn-primary">more</a>
+					</div>
+
+					<div class="row">
+						<div class="col-1-4">
+							<div class="list-item">
+								<a href="#">
+									<div class="image-container">
+										<div class="image" style="background-image: url('images/products/product005.jpg');"></div>
+									</div>
+								</a>
+								<div class="preview">
+									<a href="#">
+										<h5 class="title">阿拉斯加咖啡</h5>
+									</a>
+									<h6 class="subtitle">供應的條件</h6>
+								</div>
+							</div>
+						</div>
+						<div class="col-1-4">
+							<div class="list-item">
+								<a href="#">
+									<div class="image-container">
+										<div class="image" style="background-image: url('images/products/product006.jpg');"></div>
+									</div>
+								</a>
+								<div class="preview">
+									<a href="#">
+										<h5 class="title">阿拉斯加咖啡</h5>
+									</a>
+									<h6 class="subtitle">供應的條件</h6>
+							    </div>
+						    </div>
+					    </div>
+					    <div class="col-1-4">
+							<div class="list-item">
+								<a href="#">
+									<div class="image-container">
+										<div class="image" style="background-image: url('images/products/product007.jpg');"></div>
+									</div>
+								</a>
+								<div class="preview">
+									<a href="#">
+										<h5 class="title">阿拉斯加咖啡</h5>
+									</a>
+									<h6 class="subtitle">供應的條件</h6>
+					            </div>
+				            </div>
+			            </div>
+			            <div class="col-1-4">
+			            	<div class="list-item">
+			            		<a href="#">
+			            			<div class="image-container">
+			            				<div class="image" style="background-image: url('images/products/product008.jpg');"></div>
+			            			</div>
+			            		</a>
+			            		<div class="preview">
+									<a href="#">
+										<h5 class="title">阿拉斯加咖啡</h5>
+									</a>
+									<h6 class="subtitle">供應的條件</h6>
+			            	</div>
+			            </div>
 
 
 			
